--- a/css/style.css
+++ b/css/style.css
@@ -38,17 +38,15 @@ small>a{
     color: #fcfcfc;
 }
 
-.card {
-    width: 24%;
-    float: left;
+.custom-card {
+    width: 94%;
     background-image: url("../images/bgcard.png");
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 8px;
     padding: 28px 0;
+    margin: 14px auto;
     text-align: center;
-    box-sizing: border-box;
-    margin: 0 8px;
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);
 }
 
@@ -71,7 +69,7 @@ small>a{
     text-transform: uppercase;
 }
 
-.card p {
+.custom-card p {
     margin-bottom: 24px;
 }
 
@@ -85,9 +83,9 @@ small>a{
     display: inline-block;
 }
 
-.row{
+/* .row{
     display: flex;
     align-items: center;
     justify-content: center; 
     text-align: center; 
-}
+} */
