--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@
     font-family: 'Poppins-Bold';
     src: url('../fonts/Poppins-Bold.ttf');
 }
-    
+
+.poppinsBold {
+    font-family: Poppins-Bold;
+    font-weight: bold;
+}
+
 body {
     font-family: Poppins-Regular;
     background-image: url("../images/bgbody.png");
@@ -51,6 +56,8 @@ small>a{
 }
 
 .number span {
+    font-family: Poppins-Bold;
+    font-weight: bold;
     font-size: 56px;
     display: inline-block;
     width: 100px;
